--- a/app/views/math_trades/_form.html.erb
+++ b/app/views/math_trades/_form.html.erb
@@ -19,16 +19,16 @@
 		<%= form.text_area :description, class: "description-input" %>
 	</p>
 	
-	<p class="row">
-		<div class="small-6 columns">
+	<div class="row small-collapse">
+		<div class="small-5 columns">
 			<%= form.label :offer_deadline %>
-			<%= form.text_field :offer_deadline, class: "datetime-picker" %>
+			<%= form.text_field :offer_deadline, class: "datetime-picker", value: @trade.offer_deadline.strftime("%Y-%m-%d %H:%M:%S") %>
 		</div>
-		<div class="small-6 columns">
+		<div class="small-5 columns">
 			<%= form.label :wants_deadline %>
-			<%= form.text_field :wants_deadline, class: "datetime-picker" %>
+			<%= form.text_field :wants_deadline, class: "datetime-picker", value: @trade.wants_deadline.strftime("%Y-%m-%d %H:%M:%S") %>
 		</div>
-	</p>
+	</div>
 	
 	
 	<p>
@@ -40,7 +40,7 @@
 		<%= form.label :discussion_thread, "Discussion Thread ID" %>
 		<%= form.text_field :discussion_thread %>
 		<p class="help-text">
-			This is the thread ID for your math trade's discussion, for example: https://boardgamegeek.com/thread/XXXXXXXX/my-first-match-trade-discussion
+			This is the thread ID for your math trade's discussion, for example: https://boardgamegeek.com/thread/XXXXXXXX/my-first-math-trade-discussion
 		</p>
 	</p>
 	
