--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,3 +1,10 @@
 .description-input {
 	min-height: 200px;	
 }
+
+.datetimepicker .switch {
+  user-select: inherit;
+  color: #333;
+  font-weight: 600;
+  font-size: 0.8rem;
+}
