--- a/app/views/math_trades/edit.html.erb
+++ b/app/views/math_trades/edit.html.erb
@@ -1,3 +1,9 @@
-<h1>Editing <%= @trade.name %></h1>
-
-<%= render "form" %>
+<%= render layout: "trade_layout" do %>
+<div class="row">
+	<div class="small-12 columns">
+		<h1>Editing <%= @trade.name %></h1>
+		
+		<%= render "form" %>
+	</div>
+</div>
+<% end %>
