--- a/app/views/math_trades/new.html.erb
+++ b/app/views/math_trades/new.html.erb
@@ -1,3 +1,7 @@
-<h1>Create a New Math Trade</h1>
-
-<%= render "form" %>
+<div class="row">
+	<div class="small-12 columns">
+		<h1>Create a New Math Trade</h1>
+		
+		<%= render "form" %>
+	</div>
+</div>
