--- a/app/views/math_trades/wantlist.html.erb
+++ b/app/views/math_trades/wantlist.html.erb
@@ -1,4 +1,4 @@
 <%= render layout: "trade_layout" do %>
 <h1>Manage Wantlist</h1>
-<%= react_component "Wantlist", trade: @trade, wants: @wantlist, items: @items %>
+<%= react_component "Wantlist", trade: @trade, wants: @wantlist, items: @items, groups: @groups %>
 <% end %>
