Added who-wanted-mine, login now gives feedback, fixed an issue with changing status.

--- a/app/assets/stylesheets/math_trades.scss
+++ b/app/assets/stylesheets/math_trades.scss
@@ -159,6 +159,11 @@
 	font-size: 1.1em;
 }
 
-.trade-list-deadlines {
-	
+.traded {
+	color: #999;
+	font-style: italic;
+}
+
+.traded + p {
+	color: #999;
 }
