--- a/app/views/math_trades/wantlist.html.erb
+++ b/app/views/math_trades/wantlist.html.erb
@@ -1,4 +1,13 @@
 <%= render layout: "trade_layout" do %>
 <h1>Manage Wantlist</h1>
-<%= react_component "Wantlist", trade: @trade, wants: @wantlist, items: @items, groups: @groups, wants_due: @trade.wants_due?, offers_due: @trade.offers_due?, confirmed: @trade.user_confirmation(current_user), status: @trade.status %>
+<% if @wantlist.length > 0 %>
+	<%= react_component "Wantlist", trade: @trade, wants: @wantlist, items: @items, groups: @groups, wants_due: @trade.wants_due?, offers_due: @trade.offers_due?, confirmed: @trade.user_confirmation(current_user), status: @trade.status %>
+<% else %>
+	<p>
+		You need to add an item to your wantlist first! Browse the list until you find an item that strikes 
+		your fancy and hit the "Add" button next to it.
+		<br><br>
+		<%= link_to "Return to Offer List", math_trade_math_trade_items_path(@trade), class: "button large" %>
+	</p>
+<% end %>
 <% end %>
