Some more visual fixes, deleting of items w/out screwing up wantlist ordering.

--- a/app/views/math_trade_items/_form.html.erb
+++ b/app/views/math_trade_items/_form.html.erb
@@ -26,7 +26,7 @@
 		<%= form.label :description %>
 		<%= form.text_area :description, class: "description-input" %>
 		<p class="help-text">
-			You can list another item in the description if you know its BoardGameGeek ID. Just add [item={id}] to your description.<br>
+			You can list another item in the description if you know its BoardGameGeek ID. Just add [item=id] to your description.<br>
 			The BoardGameGeek ID of an item can be found by going to its page and looking at the URL. For example, if you want to list Suburbia (2012)
 			<code>(https://boardgamegeek.com/boardgame/123260/suburbia)</code>, the ID would be <code>123260</code>.
 	<p>
