Add From Collection, Copy From Previous Tradek

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -18,6 +18,7 @@
     <%= f.password_field :password, autocomplete: "off" %>
     <p class="help-text">
 	    <%= @minimum_password_length %> characters minimum.
+	    <strong>This is not your BGG password! This should be a new password, unique to Acceptable Trader.</strong>
     </p>
   </p>
 
