--- a/app/views/math_trades/_trade_layout.html.erb
+++ b/app/views/math_trades/_trade_layout.html.erb
@@ -7,6 +7,8 @@
       <li class="trade-nav-title">My Listings</li>
       <% if !(@trade.offers_due? || @trade.status != "active") %>
      	 <li><%= link_to "List a New Item", new_math_trade_math_trade_item_path(@trade) %></li>
+     	 <li><%= link_to "Add From Collection", new_math_trade_math_trade_item_path(@trade, mode: "fortrade") %></li>
+     	 <li><%= link_to "Copy from Previous Trade", show_copy_from_previous_trade_math_trade_math_trade_items_path(@trade) %></li>
      	<% end %>
       <li><%= link_to "My Listings", math_trade_math_trade_items_path(@trade, filter: "me") %></li>
           
